--- a/frontend-vuejs/package.json
+++ b/frontend-vuejs/package.json
@@ -21,8 +21,7 @@
     "core-js": "^3.8.3",
     "socket.io-client": "^4.5.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.0.3",
-    "vue3-swatches": "^1.0.8"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
